# otus_cpp_hw_04

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: TAbstractIP.h  main.cpp  version.cpp  version.h.in
test/: test_all.cpp
